H3CIPMSJAVA-20180830/src/objects/Alliance_and_Channel_Partner__c.object
<CustomObject>
    <fields>
        <fullName>HP_SFDC_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>HP SFDC ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Alliance and Channel Partner</relationshipLabel>
        <relationshipName>Alliance_and_Channel_Partner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Alliance and Channel Partner</relationshipLabel>
        <relationshipName>Alliance_and_Channel_Partner</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Role__c</fullName>
        <label>Partner Account Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Implementer</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Outsourcer</fullName>
                </value>
                <value>
                    <fullName>Referral/Agent</fullName>
                </value>
                <value>
                    <fullName>Prime</fullName>
                </value>
                <value>
                    <fullName>Sub</fullName>
                </value>
                <value>
                    <fullName>Co-Seller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alliance Partner</fullName>
                </value>
                <value>
                    <fullName>Channel Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Account record type = Partner</description>
        <label>Partner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alliance and Channel Partner</relationshipLabel>
        <relationshipName>Alliance_and_Channel_Partner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Partner_Name__c</fullName>
        <description>Check if Primary is checked, then this field will show Primary Partner Name, if not, then remain empty</description>
        <formula>IF( Primary__c  = TRUE,  Partner__r.Name , &quot;&quot;)</formula>
        <label>Primary Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sourced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sourced</label>
        <type>Checkbox</type>
    </fields>
    <label>业务机会合作伙伴</label>
    <nameField>
        <displayFormat>ACP-{000000}</displayFormat>
        <label>A&amp;C Partner No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>